cleanup, general css, css for print, fix blurry text, etc

--- a/elements/one-employee.css
+++ b/elements/one-employee.css
@@ -4,9 +4,26 @@
     border: 1px solid gray;
     width: 26px;
     height: 14px;
-    border-radius: 25%;
+    /*border-radius: 25%;*/
     text-align: center;
     cursor: default;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
     font-size: 10px;
     box-sizing: border-box;
+    border-radius: 5px;
+}
+
+
+@media screen {
+    :host {
+        -webkit-filter: blur(0); /*needed for the blur on box-shadow*/
+        box-shadow: 0 1px 0 rgba(255, 255, 255, .2), inset 0 4px 5px rgba(0, 0, 0, .2), inset 0 1px 0 rgba(0, 0, 0, .2);
+        background-color: #ffffed;
+    }
+}
+
+@media print {
+    :host {
+        background-color: inherit;
+    }
 }
