--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,5 @@
-html.no-js:after {
-    text: "hej";
-}
-
 @media print {
-    html, body {
-        display: block;
-        width: 100%;
-        height: 100%;
-        position: relative;
-    }
-    one-schedule {
+    html, body, one-schedule {
         display: block;
         width: 100%;
         height: 100%;
@@ -20,3 +10,10 @@ html.no-js:after {
 [unresolved] {
     opacity: 0;
 }
+
+html, body {
+    padding: 0;
+    margin: 0;
+    background-color: #fffff9;
+}
+
